lab1/Test/L1-A-6-42.output
Error Type B at Line 1
Error Type B at Line 4
Error Type A at Line 4
Error Type A at Line 6
Error Type B at Line 9
Error Type A at Line 9
Error Type A at Line 11
