lab1/Test/L1-A-6-42.cmm
float Fx ( {
}qPf0S9kbMPrMM3zE ) {
}
] float %;
struct {
}'ye5wuPEqa7NY4HaS , Ga9v5K 

;
float float Z ~( ) {
}
#